[gd_scene load_steps=8 format=2]

[ext_resource path="res://interface/theme/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://interface/theme/quadriana.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://interface/MenuCursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/TitleScreen.png" type="Texture" id=5]
[ext_resource path="res://interface/MenuUI.gd" type="Script" id=6]
[ext_resource path="res://interface/MenuItem.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MenuUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 6 )

[node name="MenuBG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="GameTitle" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 100.0
margin_top = -121.5
margin_right = 353.0
margin_bottom = 121.5
custom_fonts/font = SubResource( 1 )
text = "SUPER
TSUNAMI
SURFER"

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -93.0
margin_right = -100.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 100 )
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 330.0
margin_bottom = 179.0

[node name="Panel" type="MarginContainer" parent="PanelContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 172.0
rect_min_size = Vector2( 32, 0 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
margin_left = 36.0
margin_right = 323.0
margin_bottom = 172.0
size_flags_vertical = 3
alignment = 1

[node name="StartGame" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 287.0
margin_bottom = 40.0
size_flags_vertical = 6
text = "Start New Game"
script = ExtResource( 7 )
scene_path = "res://levels/Stage.tscn"

[node name="LoadGame" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 287.0
margin_bottom = 84.0
size_flags_vertical = 6
text = "Load Game"
script = ExtResource( 7 )
scene_path = "res://levels/Stage.tscn"

[node name="Credits" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 287.0
margin_bottom = 128.0
size_flags_vertical = 6
text = "Credits"
script = ExtResource( 7 )
scene_path = "res://interface/Credits.tscn"

[node name="Controls" type="Label" parent="PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 287.0
margin_bottom = 172.0
size_flags_vertical = 6
text = "How to Play"
script = ExtResource( 7 )
scene_path = "res://interface/Controls.tscn"

[node name="MainMenuCursor" parent="." instance=ExtResource( 4 )]
margin_left = 688.0
margin_top = 325.0
margin_right = 720.0
margin_bottom = 357.0
menu_container_path = NodePath("../PanelContainer/HBoxContainer/VBoxContainer")

[node name="MessageContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -178.5
margin_top = -75.0
margin_right = -78.5
margin_bottom = -25.0
rect_min_size = Vector2( 100, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="MessageContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 360.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Save File not found!"
align = 1
valign = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="cursor_selected" from="PanelContainer/HBoxContainer/VBoxContainer/StartGame" to="." method="start_game"]
[connection signal="cursor_selected" from="PanelContainer/HBoxContainer/VBoxContainer/LoadGame" to="." method="load_game"]
[connection signal="cursor_selected" from="PanelContainer/HBoxContainer/VBoxContainer/Credits" to="." method="credits_menu"]
[connection signal="cursor_selected" from="PanelContainer/HBoxContainer/VBoxContainer/Controls" to="." method="controls_menu"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
